litt ymse frontend og litt bakki og
