# server/controllers/message_controller.py
@@ -1,0 +1,49 @@
+import connexion
+import six
+
+import util
+
+
+def room_room_id_messages_get(room_id, room_id2):  # noqa: E501
+    """room_room_id_messages_get
+
+     # noqa: E501
+
+    :param room_id: 
+    :type room_id: str
+    :param room_id2: User must provide a name
+    :type room_id2: str
+
+    :rtype: None
+    """
+    return 'do some magic!'
+
+
+def room_room_id_user_id_messages_get(room_id, user_id):  # noqa: E501
+    """room_room_id_user_id_messages_get
+
+     # noqa: E501
+
+    :param room_id: The id for the room needed
+    :type room_id: str
+    :param user_id: The id for the user needed
+    :type user_id: str
+
+    :rtype: None
+    """
+    return 'do some magic!'
+
+
+def room_room_id_user_id_messages_post(room_id, user_id):  # noqa: E501
+    """room_room_id_user_id_messages_post
+
+     # noqa: E501
+
+    :param room_id: The id for the room needed
+    :type room_id: str
+    :param user_id: The id for the user needed
+    :type user_id: str
+
+    :rtype: None
+    """
+    return 'do some magic!'
