# server/models/__init__.py
@@ -3,4 +3,8 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from swagger_server.models.user import User
+from models.message import Message
+from models.room import Room
+from models.room_messages import RoomMessages
+from models.room_users import RoomUsers
+from models.user import User
