# server/models/room_messages.py
@@ -1,0 +1,91 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from models.base_model_ import Model
+from models.message import Message
+import util
+
+
+class RoomMessages(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, id: str=None, messages: List[Message]=None):  # noqa: E501
+        """RoomMessages - a model defined in Swagger
+
+        :param id: The id of this RoomMessages.  # noqa: E501
+        :type id: str
+        :param messages: The messages of this RoomMessages.  # noqa: E501
+        :type messages: List[Message]
+        """
+        self.swagger_types = {
+            'id': str,
+            'messages': List[Message]
+        }
+
+        self.attribute_map = {
+            'id': 'id',
+            'messages': 'Messages'
+        }
+
+        self._id = id
+        self._messages = messages
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'RoomMessages':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The RoomMessages of this RoomMessages.  # noqa: E501
+        :rtype: RoomMessages
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def id(self) -> str:
+        """Gets the id of this RoomMessages.
+
+
+        :return: The id of this RoomMessages.
+        :rtype: str
+        """
+        return self._id
+
+    @id.setter
+    def id(self, id: str):
+        """Sets the id of this RoomMessages.
+
+
+        :param id: The id of this RoomMessages.
+        :type id: str
+        """
+
+        self._id = id
+
+    @property
+    def messages(self) -> List[Message]:
+        """Gets the messages of this RoomMessages.
+
+
+        :return: The messages of this RoomMessages.
+        :rtype: List[Message]
+        """
+        return self._messages
+
+    @messages.setter
+    def messages(self, messages: List[Message]):
+        """Sets the messages of this RoomMessages.
+
+
+        :param messages: The messages of this RoomMessages.
+        :type messages: List[Message]
+        """
+
+        self._messages = messages
